--- a/front-end/css/skeleton.css
+++ b/front-end/css/skeleton.css
@@ -1,6 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700&subset=latin,cyrillic);
 
-.container {
+.umg_container {
+    padding: 40px 0;
+    font-family: "Open Sans", sans-serif;
     max-width: 580px;
-    margin: auto;
 }
