--- a/front-end/scss/main.scss
+++ b/front-end/scss/main.scss
@@ -1,20 +1,131 @@
+%clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .umg { //prefix our styles
 
   //colors
   $main: #f9ba00;
   $text: #444;
   $dimmed: #888;
+  $black: #000;
 
+  &_container {
+    margin: auto;
+    line-height: 1.3;
 
+    .jq-radio {
+      display: inline-block;
+      vertical-align: middle;
+      width: 25px;
+      height: 25px;
+      margin: -2px 10px 0 0;
+      background: no-repeat -25px 0 url("../img/radio.png");
+      &.checked {
+        background-position: 0 0;
+      }
+    }
+
+  }
+
+  &_button {
+    display: inline-block;
+    vertical-align: middle;
+    padding: 10px 40px;
+    text-decoration: none;
+    cursor: pointer;
+    background: $main;
+    color: #fff;
+    &:hover {
+      background: darken($main, 2%);
+    }
+    &--secondary {
+      background: $black;
+      &:hover {
+        background: lighten($black, 10%);
+      }
+    }
+    &--disabled {
+      background: $dimmed;
+      cursor: not-allowed;
+    }
+  }
 
   &_progress {
+    margin: 10px 0 20px;
     &-caption {
       font-size: 14px;
       color: $dimmed;
     }
+    &-bar {
+      height: 5px;
+      margin: 4px 0;
+      background: $dimmed;
+    }
+    &-barInner {
+      float: left;
+      height: 5px;
+      background: $main;
+    }
   }
 
-
+  &_body {
+    @extend %clearfix;
+    &-list {
+      position: relative;
+      z-index: 1;
+      float: left;
+      width: 40%;
+      padding: 20px 10px;
+      box-sizing: border-box;
+      box-shadow: 0 0 3px rgba(0,0,0,.4);
+    }
+    &-listLi {
+      position: relative;
+      float: left;
+      clear: left;
+      padding: 4px 10px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 100%;
+      box-sizing: border-box;
+      background: #fff;
+      &:hover {
+        z-index: 1;
+        max-width: none;
+        box-shadow: 0 0 3px rgba(0,0,0,.4);
+      }
+    }
+    &-answer {
+      float: right;
+      width: 60%;
+      padding-left: 36px;
+      padding-top: 20px;
+      box-sizing: border-box;
+    }
+    &-answerCaption {
+      font-size: 16px;
+      color: $dimmed;
+    }
+    &-answerList {
+      margin: 20px 0;
+    }
+    &-answerItem {
+       display: block;
+       margin: 10px 0;
+    }
+    &-controls {
+      text-align: justify;
+      &:after {
+        content: "";
+        display: inline-block;
+        width: 100%;
+      }
+    }
+  }
 
 
 
