--- a/front-end/scss/main.scss
+++ b/front-end/scss/main.scss
@@ -18,11 +18,10 @@
     line-height: 1.3;
 
     .jq-radio {
-      display: inline-block;
-      vertical-align: middle;
+      float: left;
       width: 25px;
       height: 25px;
-      margin: -2px 10px 0 0;
+      margin: -2px 0 0 -40px;
       background: no-repeat -25px 0 url("../img/radio.png");
       &.checked {
         background-position: 0 0;
@@ -109,7 +108,7 @@
     &-answer {
       float: right;
       width: 60%;
-      padding-left: 36px;
+      padding-left: 40px;
       padding-top: 20px;
       box-sizing: border-box;
     }
@@ -118,12 +117,15 @@
       color: $dimmed;
     }
     &-answerList {
+      @extend %clearfix;
       margin: 20px 0;
     }
     &-answerItem {
        display: block;
-       margin: 10px 0;
+       margin: 14px 0;
+       padding-left: 42px;
        font-size: 16px;
+       box-sizing: border-box;
     }
     &-controls {
       text-align: justify;
@@ -138,7 +140,7 @@
     }
   }
 
-  @media (max-width: 500px) {
+  @media (max-width: 600px) {
     &_body-list,
     &_body-answer {
       float: none;
@@ -151,15 +153,24 @@
       border: none;
       font-size: 14px;
     }
+    &_body-answerList{
+      margin-bottom: 10px;
+    }
     &_body-answerItem {
+      float: left;
+      width: 50%;
       font-size: 14px;
       margin: 8px 0;
+      padding: 0 10px 0 46px;
     }
     &_body-answerCaption {
       display: none;
     }
     &_body-answer {
-      padding: 0 10px;
+      padding: 0;
+    }
+    &_body-controls {
+      padding: 10px;
     }
   }
 
@@ -168,6 +179,12 @@
       .umg_button {
         display: block;
       }
+    }
+    &_body-answerItem {
+      float: none;
+      width: auto;
+      padding-top: 4px;
+      padding-bottom: 4px;
     }
   }
 
