--- a/front-end/scss/main.scss
+++ b/front-end/scss/main.scss
@@ -91,6 +91,7 @@
     top: 0;
     opacity: 1;
     transition-duration: .6s;
+    padding-bottom: 40px;
     &.ng-hide {
       top: 20px;
       transition-duration: 0;
