--- a/front-end/scss/main.scss
+++ b/front-end/scss/main.scss
@@ -16,6 +16,7 @@
   &_container {
     margin: auto;
     line-height: 1.3;
+    padding-bottom: 40px;
 
     input[type="radio"] {display: none;}
     .radio-view {
@@ -55,7 +56,7 @@
     }
     &--disabled {
       background: #ddd !important;
-      cursor: not-allowed;
+      cursor: default !important;
     }
   }
 
@@ -91,7 +92,6 @@
     top: 0;
     opacity: 1;
     transition-duration: .6s;
-    padding-bottom: 40px;
     &.ng-hide {
       top: 20px;
       transition-duration: 0;
@@ -189,7 +189,7 @@
       opacity: 0;
     }
     &-table {
-      margin-top: 10px;
+      margin-top: 20px;
       border-collapse: collapse;
       box-shadow: 0 0 4px rgba(0,0,0,.4);
       font-size: 14px;
@@ -221,14 +221,19 @@
       text-align: center;
     }
     &-toggle {
+      margin-bottom: 10px;
       font-size: 12px;
       text-align: center;
-      a {color: inherit;}
+      a {
+        color: inherit !important;
+        cursor: pointer;
+      }
+      a, .umg_button {margin: 0 5px;}
     }
   }
 
   &_soc {
-    padding-top: 20px;
+    margin-top: 20px;
     text-align: center;
     font-size: 12px;
   }
@@ -267,7 +272,16 @@
       padding: 10px;
     }
     &_results-table {
+      margin-top: 6px;
       th {white-space: normal;}
+    }
+    &_results-toggle a,
+    &_results-toggle .umg_button {
+      margin: 0;
+    }
+    &_results-toggle .umg_button {
+      display: block;
+      margin-bottom: 10px;
     }
   }
 
