fixed some front-end issues, also removed social share popup

--- a/front-end/scss/main.scss
+++ b/front-end/scss/main.scss
@@ -4,6 +4,11 @@
   clear: both;
 }
 
+//remove popup
+.b-share__handle:first-child {
+  display: none;
+}
+
 .umg { //prefix our styles
 
   //colors
