finally fixed dupes issue made font-size smaller

--- a/front-end/scss/main.scss
+++ b/front-end/scss/main.scss
@@ -134,7 +134,7 @@
       text-overflow: ellipsis;
       max-width: 100%;
       box-sizing: border-box;
-      font-size: 16px;
+      font-size: 14px;
       &:first-child {
         border-top: none;
       }
@@ -159,7 +159,7 @@
       box-sizing: border-box;
     }
     &-answerCaption {
-      font-size: 16px;
+      font-size: 14px;
       color: $dimmed;
     }
     &-answerList {
@@ -170,7 +170,7 @@
        display: block;
        margin: 14px 0;
        padding-left: 42px;
-       font-size: 16px;
+       font-size: 14px;
        box-sizing: border-box;
     }
     &-controls {
@@ -256,7 +256,7 @@
       float: left;
       width: 50%;
       border: none;
-      font-size: 14px;
+//      font-size: 14px;
     }
     &_body-answerList{
       margin-bottom: 10px;
@@ -264,7 +264,7 @@
     &_body-answerItem {
       float: left;
       width: 50%;
-      font-size: 14px;
+//      font-size: 14px;
       margin: 8px 0;
       padding: 0 10px 0 46px;
     }
