--- a/front-end/scss/main.scss
+++ b/front-end/scss/main.scss
@@ -4,6 +4,10 @@
   clear: both;
 }
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 //remove popup
 .b-share__handle:first-child {
   display: none;
@@ -23,6 +27,16 @@
   $widthPhone: 768px;
 
   &_container {
+    opacity: 0;
+    height: 0;
+    transition: .2s opacity;
+    &.loaded {
+      opacity: 1;
+      height: auto;
+      &+.umg_preloader {
+        display: none;
+      }
+    }
     margin: auto;
     line-height: 1.3;
     padding-bottom: 40px;
@@ -247,12 +261,12 @@
   }
 
   &_results {
-    opacity: 1;
+    opacity: 0;
     transition-duration: .6s;
-    &.ng-hide {
+    &.shown {
       //top: 20px;
       //transition-duration: 0;
-      opacity: 0;
+      opacity: 1;
     }
     &-table {
       margin-top: 20px;
@@ -262,15 +276,16 @@
       opacity: 1;
       transition-duration: .4s;
       &.ng-hide {opacity: 0;}
+      th, td {
+        padding: 10px;
+        background: none !important;
+      }
       th {
-        background: $black;
+        background: $black !important;
         color: #fff;
         font-size: 13px;
         font-weight: normal;
         white-space: nowrap;
-      }
-      th, td {
-        padding: 10px;
       }
       @media (max-width: $widthTablet) {
         margin-top: 6px;
@@ -279,9 +294,9 @@
     }
     &-tableAnswerRow {
       border-top: 1px solid #ccc;
-      background: #ffecec;
+      background: #ffecec !important;
       &.correct {
-        background: #effdf4;
+        background: #effdf4 !important;
       }
     }
     &-title {
@@ -297,6 +312,7 @@
       a {
         color: inherit !important;
         cursor: pointer;
+        transition-duration: 0 !important;
       }
       a, .umg_button {
         margin: 0 5px;
@@ -322,3 +338,7 @@
 
 }
 
+.umg_preloader {
+  height: 32px;
+  background: center 0 no-repeat url("../img/preloader.gif");
+}
