--- a/front-end/scss/main.scss
+++ b/front-end/scss/main.scss
@@ -328,6 +328,12 @@
         }
       }
     }
+    &-caption {
+      margin: 0 0 16px;
+      text-align: center;
+      font-size: 13px;
+      color: #888888;
+    }
   }
 
   &_soc {
